// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Byline should render correctly 1`] = `
<div>
  should render correctly
</div>
`;

exports[`Byline should render correctly without an avatar 1`] = `
<div>
  should render correctly without an avatar
</div>
`;
